--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
     working_dir: /var/www
+    depends_on:
+      - db
     ports:
       - 8989:80
     networks:
@@ -26,7 +28,6 @@ services:
     tty: true
     ports:
       - "80:80"
-      - "443:443"
     networks:
       - app-network
 
@@ -39,8 +40,8 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_ROOT_PASSWORD: your_mysql_root_password
+      MYSQL_DATABASE: medcloud
+      MYSQL_ROOT_PASSWORD: toor
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     networks:
