--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,6 +15,8 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
+      - ls
+      - cat .env
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:latest
   post_build:
